Created my Black Goose project files

--- a/black-goose-bistro.html
+++ b/black-goose-bistro.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Goose Bistro</title>
+    <link rel="stylesheet" href="blackgoose.css">
 </head>
 <body>
     
 </body>
 </html>
+<h1c><img src="Blackgoose.png" alt="Logo for the Black Gosse Bistro"><br> Black Goose Bistro"</h1c>
+
+</header>
+
+<nav>
+
+</nav>
+
+<main> 
+
+    <h2> The Resterant</h2>
+    <p> The Black Gosse Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.</p>.
+
+    <h2>Catering</h2> 
+    <p>Seekonk, Massachusetts;<br> 
+     Monday through Thursday, 11am to 9pm; <br>Friday and Saterday, 11am to midnight</p>   
+
+        </main>
+
+        <footer>
+
+        </footer>
+        
+  </body>
+ <html> 
