--- a/black-goose-bistro.html
+++ b/black-goose-bistro.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     
-</body>
+
 </html>
-<h1c><img src="Blackgoose.png" alt="Logo for the Black Gosse Bistro"><br> Black Goose Bistro"</h1c>
+<h1><img src="blackgoose.png" alt="Logo for the Black Gosse Bistro"><br> Black Goose Bistro</h1>
 
 </header>
 
