--- a/black-goose-bistro.html
+++ b/black-goose-bistro.html
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Goose Bistro</title>
     <link rel="stylesheet" href="blackgoose.css">
+
 </head>
 <body>
-    
+    <h2> Katelyn Curtiss</h2>
+    <h1> Cats</h1>
 
 </html>
 <h1><img src="blackgoose.png" alt="Logo for the Black Gosse Bistro"><br> Black Goose Bistro</h1>
+
+
+<figure> 
+
+    <img src="long-cat.jpg" alt="long-cat" width="640" height="391"> 
+    <a href="http://long-cat">long-cat</a>
+    <figcaption> Long Cat</figcaption>
+
+</figure>
 
 </header>
 
@@ -35,3 +46,11 @@
         
   </body>
  <html> 
+    <!DOCTYPE html>
+<html>
+<head>
+<link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Aladin';font-size: 22px;
+}
