--- a/black-goose-bistro.html
+++ b/black-goose-bistro.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Goose Bistro</title>
     <link rel="stylesheet" href="blackgoose.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <h2> Katelyn Curtiss</h2>
     <h1> Cats</h1>
 
-</html>
+
 <h1><img src="blackgoose.png" alt="Logo for the Black Gosse Bistro"><br> Black Goose Bistro</h1>
 
 
 <figure> 
 
     <img src="long-cat.jpg" alt="long-cat" width="640" height="391"> 
-    <a href="http://long-cat">long-cat</a>
+    <a href="https://www.chewy.com/?scrlybrkr=642bf5c5">long-cat</a>
     <figcaption> Long Cat</figcaption>
 
 </figure>
@@ -38,19 +42,14 @@
     <p>Seekonk, Massachusetts;<br> 
      Monday through Thursday, 11am to 9pm; <br>Friday and Saterday, 11am to midnight</p>   
 
-        </main>
+</main>
 
-        <footer>
+<footer>
 
-        </footer>
+</footer>
         
-  </body>
- <html> 
-    <!DOCTYPE html>
-<html>
-<head>
-<link href='https://fonts.googleapis.com/css?family=Aladin' rel='stylesheet'>
-<style>
-body {
-    font-family: 'Aladin';font-size: 22px;
-}
+
+
+
+</body>
+</html>
