--- a/black-goose-bistro.html
+++ b/black-goose-bistro.html
@@ -21,7 +21,9 @@
 
 <figure> 
 
-    <img src="long-cat.jpg" alt="long-cat" width="640" height="391"> 
+    <a href="https://www.chewy.com/?scrlybrkr=642bf5c5"><img src="long-cat.jpg" alt="long-cat" width="640" height="391"></a>
+
+
     <a href="https://www.chewy.com/?scrlybrkr=642bf5c5">long-cat</a>
     <figcaption> Long Cat</figcaption>
 
